--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </section>
         <footer>
             <p>All rights reserved &#169;</p>
-            <a href="#top">Back to Top</a>
+            <a href="#top" id="footer-link">Back to Top</a>
         </footer>
         </body>
 </html>
